# spotify-playlist-curator-app

./: .env.example  .gitignore  Authenticator.py  README.md  pyproject.toml
app/: __init__.py  auth.py  routes.py  spotify.py
